# krkrz_dev

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Makefile  README.md  mkdocs.yml  vcpkg.json
.github/workflows/: docs-pages.yml  docs-wiki.yml
data/: startup.tjs
doc/: _index.md  _inventory.json  _missing.md  _pending_cleanup.md  index.md
doc/guide/: ColorCodes.md  CommandLine.md  ComputerDependentProblems.md  Configure.md  Console.md  Copyrights.md  Debug.md  EventSystem.md  FileChkTool.md  Files.md  FontMaker.md  GraphicSystem.md  KeyCodes.md  LoopTuner.md  MouseCursors.md  Plugins.md  Releaser.md  SignTool.md  SoundSystem.md  Startup.md  StorageSystem.md  TPC.md  Transition.md  about.md
doc/manual/: AsyncTrigger.manual.tjs  Bitmap.manual.tjs  BitmapLayerTreeOwner.manual.tjs  Canvas.manual.tjs  Clipboard.manual.tjs  Console.manual.tjs  Controller.manual.tjs  Debug.manual.tjs  Font.manual.tjs  ImageFunction.manual.tjs  Layer.manual.tjs  Matrix32.manual.tjs  Matrix44.manual.tjs  NullDrawDevice.manual.tjs  OGLDrawDevice.manual.tjs  Offscreen.manual.tjs  Plugins.manual.tjs  Rect.manual.tjs  SDLDrawDevice.manual.tjs  Scripts.manual.tjs  ShaderProgram.manual.tjs  SoundBuffer.manual.tjs  Storages.manual.tjs  System.manual.tjs  Texture.manual.tjs  Timer.manual.tjs  VertexBinder.manual.tjs  VertexBuffer.manual.tjs  VideoOverlay.manual.tjs  WaveSoundBuffer.PhaseVocoder.manual.tjs  WaveSoundBuffer.manual.tjs  Window.BasicDrawDevice.manual.tjs  Window.manual.tjs
doc/reference/: ActiveX.md  Array.md  AsyncTrigger.md  BinaryStream.md  Bitmap.md  BitmapLayerTreeOwner.md  CSVParser.md  Canvas.md  Clipboard.md  Console.md  Controller.md  Debug.md  Dictionary.md  Font.md  GdiPlus.Appearance.md  GdiPlus.Font.md  GdiPlus.Image.md  GdiPlus.Matrix.md  GdiPlus.Path.md  GdiPlus.PointF.md  GdiPlus.RectF.md  GdiPlus.md  HttpRequest.md  ImageFunction.md  JScriptHost.md  Layer.md  LineParser.md  Math.md  Matrix32.md  Matrix44.md  MenuItem.md  NullDrawDevice.md  OGLDrawDevice.md  Offscreen.md  PSD.md  Pad.md  Plugins.md  PreRenderedFontImage.md  Process.md  Rect.md  (+30 more)
doc/specification/: fileformat.md  graphics.md  index.md  movie.md  sound.md
doc/tjs2/: about.md  array.md  basictypes.md  class.md  date.md  dictionary.md  exception.md  expr_and_op.md  factor.md  for.md  function.md  if.md  index.md  interface.md  math.md  octet.md  pp.md  property.md  randomgenerator.md  regexp.md  simple.md  statement_and_block.md  string.md  style.md  switch.md  token.md  try.md  ttjs.md  types.md  variable.md  variant.md  vmcodes.md  while.md  with.md
doc/topics/: LICENSE.md  index.md
doc/topics/core/: anti_cracking.md  engine_setting.md  low_memory.md
doc/topics/tjs2/: asyncimageload.md  check_2_z.md  deleted.md  fileformat.md  playmovie.md  tooltip.md  type_specified.md
doc/topics/tools/: releaser.md
doc/topics/user/: engine_setting.md
tools/docgen/: README.md  diff_docs.py  fix_props.py  html2spec.py  merge_mpd.py  requirements.txt  scan_tjs.py  sync_manual.py  sync_wiki.py  tjsdoc.py  xml2manual.py  xml2md.py  xml2tjs2.py
